# fastapi-bootstrapped

./: .env  .gitignore  README.md  example.env  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 6c3fbc1eb5bf_create_users_table.py
scripts/: seed.py
src/: __init__.py  main.py  server.py
src/api/: __init__.py
src/api/v1/: auth.py  users.py
src/base/: model.py  repository.py
src/core/: app.py  config.py  database.py  server.py
src/helpers/: auth.py  constants.py  events.py  exceptions.py  logger.py  mailer.py  middlewares.py  model.py  repository.py  utils.py
src/middlewares/: auth.py  log_requests.py
src/models/: __init__.py  auth.py  users.py
src/repositories/: users.py
src/services/: auth.py  users.py
src/workers/: users.py
